Catalog price with 2 decimals

--- a/content/templates/subject/catalog.html
+++ b/content/templates/subject/catalog.html
@@ -93,7 +93,6 @@
 	    {%- set p_title = p.Title.decode('utf-8')|e -%}
 	    {%- set p_url   = p.LinkBase + '.htm' -%}
 	    {%- set p_rank  = p.Row_Number|int -%}
-	    {%- set p_price = "%.2f"|format(p.PriceAmount) -%}
 	    {%- set p_date  = p.PublishingDateValue -%}
 	            <tr>
 	              <td>
@@ -123,7 +122,7 @@
 	                    <tr>
 	                      <td width="201" valign="bottom" class="celdapreciocomprar">
 	                        <div align="left">
-	                          <span class="Fprecio">PRECIO: $ {{ p_price }}.-</span>
+	                          <span class="Fprecio">PRECIO: $ {{ "%0.2f"|format(p.PriceAmount) }}.-</span>
 	                        </div>
 	                      </td>
 	                      <td valign="bottom">
