correccion en el formateo del precio

--- a/content/templates/subject/catalog.html
+++ b/content/templates/subject/catalog.html
@@ -122,7 +122,7 @@
 	                    <tr>
 	                      <td width="201" valign="bottom" class="celdapreciocomprar">
 	                        <div align="left">
-	                          <span class="Fprecio">PRECIO: $ {{ "%0.2f"|format(p.PriceAmount) }}.-</span>
+	                          <span class="Fprecio">PRECIO: $ {{ "%.2f"|format(p.PriceAmount) }}.-</span>
 	                        </div>
 	                      </td>
 	                      <td valign="bottom">
