Fix invalid html

--- a/content/templates/subject/index.html
+++ b/content/templates/subject/index.html
@@ -118,7 +118,7 @@
     	<div style="float: left; display: block; ">
 			<div style="position: fixed; ">
 				<a href="/{{ section_name|lower }}">
-					<img src="{{ url.images }}/imagenes/blank.gif" border="0px" width="210px" height="60px" title="home de {{ section_name }}"/>
+					<img src="{{ url.images }}/imagenes/blank.gif" width="210px" height="60px" alt="home de {{ section_name }}">
 				</a>
 			</div>
 		</div>
