--- a/content/stage0/css/section.css
+++ b/content/stage0/css/section.css
@@ -473,3 +473,8 @@ margin:0 5px;
 height:20px;
 background-color:#004B85;
 }
+
+div#seccionTematika div div a img {
+width:  210px;
+height: 60px;
+}
