--- a/content/templates/subject/catalog.html
+++ b/content/templates/subject/catalog.html
@@ -1,11 +1,11 @@
 {%- if d.Products -%}
 	<div style="width: 650px; float: right; position:static;">
 	  <table width="600" border="0" cellpadding="0" cellspacing="0"
-	      class="Gtablacontenido" align="center">
+	      class="Gtablacontenido">
 	  <tbody>
 	  <tr>
 	    <td class="Gcentro" width="422">
-	      <table width="390" border="0" align="center" cellpadding="0"
+	      <table width="390" border="0" cellpadding="0"
 	          cellspacing="0">
 	      <tbody>
 	      <tr>
@@ -25,7 +25,7 @@
 	      </tr>
 	      <tr>
 	        <td>
-	          <div align="center">
+	          <div>
 	            <table width="390" border="0" cellspacing="0" cellpadding="0"
 	                class="modulobuscador">
 	            <tbody>
@@ -121,7 +121,7 @@
 	                    </tr>
 	                    <tr>
 	                      <td width="201" valign="bottom" class="celdapreciocomprar">
-	                        <div align="left">
+	                        <div>
 	                          <span class="Fprecio">PRECIO: $ {{ "%.2f"|format(p.PriceAmount) }}.-</span>
 	                        </div>
 	                      </td>
