Remove dupe unused id

--- a/content/templates/fragments/left_menu.html
+++ b/content/templates/fragments/left_menu.html
@@ -1,5 +1,5 @@
 {%- if d.Categoria_Seccion -%}
-<div class="panelSeccionesLeft" id="divBarraDerecha">
+<div class="panelSeccionesLeft">
 	{%- set SubjectId = d.Categoria_Seccion -%}
 	{%- if SubjectId == 1 -%}
 	{%- endif %}
