--- a/content/templates/fragments/right_menu.html
+++ b/content/templates/fragments/right_menu.html
@@ -1,4 +1,4 @@
-<div class="panelSecciones" id="divBarraDerecha">
+<div class="panelSecciones">
 	{%- if d.Categoria_Seccion -%}
 		{%- set SubjectId = d.Categoria_Seccion -%}
 		{%- if SubjectId == 1 -%}
