--- a/content/stage0/css/games.css
+++ b/content/stage0/css/games.css
@@ -1046,6 +1046,7 @@ padding-bottom:10px;
 border-right:solid 1px #CCC;
 vertical-align:top;
 text-align:center;
+width: 82px;
 }
 
 .celdacontenido {
@@ -1058,6 +1059,7 @@ padding-left:10px;
 text-align:left;
 height:35px;
 vertical-align:bottom;
+width: 201px;
 }
 
 .celdapaginas {
@@ -1072,6 +1074,7 @@ border-bottom:solid 1px #666;
 padding:10px 7px 12px;
 background-color:#EFF0F2;
 text-align:left;
+width: 155px;
 }
 
 .moduloordencelda {
