--- a/content/stage0/css/music.css
+++ b/content/stage0/css/music.css
@@ -1097,6 +1097,7 @@ a.FCategorias:hover
 	border-right:solid 1px #CCC;
 	vertical-align:top;
 	text-align:center;
+    width: 82px;
 }
 
 .celdacontenido
@@ -1111,6 +1112,7 @@ a.FCategorias:hover
 	text-align:left;
 	height:35px;
 	vertical-align:bottom;
+    width: 201px;
 }
 
 .celdapaginas
@@ -1127,6 +1129,7 @@ a.FCategorias:hover
 	padding:10px 7px 12px;
 	background-color:#EFF0F2;
 	text-align:left;
+width: 155px;
 }
 
 .moduloordencelda
