--- a/content/templates/product/product.html
+++ b/content/templates/product/product.html
@@ -63,7 +63,8 @@
             {%- if d.ProductForm_desc -%}<span>Formato: {{ d.ProductForm_desc.decode('utf-8')|e }}</span>{%- endif %}
 
             {%- if d.ProductAvailability == '21' and d.FulfillmentValue -%}
-                <span>Disponibilidad: Salida del dep&oacute;sito en {{ d.FulfillmentValue }} {{ d.FulfillmentType_desc|e }} h&aacute;biles</span>
+                {#- <span>Disponibilidad: Salida del dep&oacute;sito en {{ d.FulfillmentValue }} {{ d.FulfillmentType_desc|e }} h&aacute;biles</span> -#}
+                <span>Disponibilidad: {{ d.Fulfillment_desc.decode('utf-8')|e }}</span>
             {%- else  -%}
                 <span>Disponibilidad: Pedido especial</span>
             {%- endif -%}
