Handle special delivery from desc on showcase too
** NEEDS TESTING **

--- a/content/templates/macros/slider.html
+++ b/content/templates/macros/slider.html
@@ -134,8 +134,9 @@
                         </tr></tbody></table>
                         Entrega:
                         <span class="product-fulfillment">
-                            Salida del dep&oacute;sito en
-                            {{ hs }} horas h&aacute;biles
+                            {#- Salida del dep&oacute;sito en
+                            {{ hs }} horas h&aacute;biles -#}
+                            {{ p.Fulfillment_desc.decode('utf-8')|e }}
                         </span><br>
                         <span class="product-delivery-note">
                                 + <a href="javascript:false;">
