Revert "Handle special delivery from desc on showcase too"
This reverts commit 6c6789d09473914191561aeefa4a85002cb8e8ca.

--- a/content/templates/macros/slider.html
+++ b/content/templates/macros/slider.html
@@ -134,9 +134,8 @@
                         </tr></tbody></table>
                         Entrega:
                         <span class="product-fulfillment">
-                            {#- Salida del dep&oacute;sito en
-                            {{ hs }} horas h&aacute;biles -#}
-                            {{ p.Fulfillment_desc.decode('utf-8')|e }}
+                            Salida del dep&oacute;sito en
+                            {{ hs }} horas h&aacute;biles
                         </span><br>
                         <span class="product-delivery-note">
                                 + <a href="javascript:false;">
