--- a/content/templates/product/product.html
+++ b/content/templates/product/product.html
@@ -59,7 +59,7 @@
             <span>I.S.B.N : {{ d.Identifiers[0].IDValue }}</span>
             {%- endif %}
             <span>Clasificaci&oacute;n: {%- for categorie in d.Categories -%}<a href="{{ categorie.URL }}">{{ categorie.Title.decode('utf-8')|e }}</a>{%- if not loop.last -%}&nbsp;&raquo;&nbsp;{%- endif %} {%- endfor %}</span>
-            {%- if d.ProductForm_desc -%}<span>Formato: {{ d.ProductForm_desc.decode('utf-8')|e }}</span>{%- endif %}
+            {%- if d.TipoArticulo_desc -%}<span>Formato: {{ d.TipoArticulo_desc.decode('utf-8')|e }}</span>{%- endif %}
 
             {%- if d.ProductAvailability == '21' and d.FulfillmentValue -%}
                 {#- <span>Disponibilidad: Salida del dep&oacute;sito en {{ d.FulfillmentValue }} {{ d.FulfillmentType_desc|e }} h&aacute;biles</span> -#}
