--- a/content/templates/subject/index.html
+++ b/content/templates/subject/index.html
@@ -181,6 +181,10 @@
 		jQuery(document).ready(function() {
 			$('#sliderSection').tinycarousel({ axis: 'y', display: 1} );
 			renderLastVisited('lastvisited');
+			// workaround pagination catalog
+			try {
+	            APP.fillCatalog('rank');
+	        } catch (e) {}
 		});
 		/* parse messages */
 		{% include "fragments/messages_parse.js" %}
