--- a/content/templates/subject/index.html
+++ b/content/templates/subject/index.html
@@ -3,6 +3,9 @@
 {%- set section_name = d.Title.decode('utf-8') -%}
 {%- set section_name_loc = d.Path[0].Nombre.decode('utf-8')|e -%}
 {%- set subsection_name = d.Path[-1].Nombre.decode('utf-8')|e -%}
+{%- if subsection_name == 'S / D' -%}
+	{%- set subsection_name = 'Varios' -%}
+{%- endif -%}
 {% set section = d.Categoria_Seccion %}
 {%- if d.Path and d.Path|length == 1 -%}
     {%- set section_page = true -%}
