--- a/content/templates/subject/catalog.html
+++ b/content/templates/subject/catalog.html
@@ -1,3 +1,79 @@
+{%- macro showItem(p, style) -%}
+	{%- if p['Authors'] and p['Authors'][0]|length > 0 -%}
+        {%- set author = p.Authors[0].ContributorName.decode('utf-8')|e -%}
+        {%- set author_url = p.Authors[0].ContributorURL|e -%}
+    {%- else -%}
+        {%- set author = '' -%}
+        {%- set author_url = '' -%}
+    {%- endif -%}
+    {%- set p_id    = p.EntityId -%}
+    {%- set p_cover = url.images + p.CoverSmall -%}
+    {%- set p_title = p.Title.decode('utf-8')|e -%}
+    {%- set p_url   = p.LinkBase|e + '.htm' -%}
+    {%- set p_rank  = p.Row_Number|int -%}
+    {%- set p_date  = p.PublishingDateValue -%}
+    <tr style="{{ style }}">
+      <td>
+        <table width="390" cellspacing="0" cellpadding="0"
+            class="moduleproductob">
+        <tbody>
+        <tr>
+          <td>
+            <table cellspacing="0"
+                cellpadding="0">
+            <tbody>
+            <tr>
+              <td rowspan="5" class="celdafoto">
+                <a href="{{ p_url }}">
+                <img src="{{ p_cover }}" alt="{{ p_title }}"
+                        class="Gimagesproductos"
+                           width="{{ section_wh[0] }}"
+                           height="{{ section_wh[1] }}">
+                </a>
+              </td>
+              <td colspan="3" valign="top" class="celdacontenido">
+                <a href="{{ p_url }}" class="FProductos">{{ p_title}}</a><br>
+                <a href="{{ author_url }}" class="Fautores">{{ author }}</a><br>
+                <a href="/buscador/productos.jsp?seccion={{ section }}&amp;idSeccion={{ section }}&amp;criterioDeOrden=6&amp;claveDeBusqueda=porCategorias&amp;texto={{ subsection_name|replace(' ','+')|e }}&amp;grupo={{ cat_group }}" class="Fautores">Subcategoria</a>&nbsp;<span class="Fprecio">{{ subsection_name }}</span>
+              </td>
+            </tr>
+            <tr>
+              <td valign="bottom" class="celdapreciocomprar">
+                <div>
+                  <span class="Fprecio">PRECIO: $ {{ "%.2f"|format(p.PriceAmount) }}.-</span>
+                </div>
+              </td>
+              <td valign="bottom">
+                <div>
+                  <table width="2" cellspacing="0" cellpadding="0"
+                           class="catalog-info-price">
+                  <tbody>
+                  <tr>
+                    <td class="divInfo">
+                      <a href="{{ p_url }}" class="FProductos"><img src="{{ url.images }}/imagenes/libros/b-info.gif" alt="{{ author }} - {{ p_title }}" title="{{ author }} - {{ p_title }}"></a>
+                    </td>
+                    <td class="divComprarPedir">
+                      <a href="javascript:APP.cartAdd('+e[pProductId]+');window.scrollTo(0,0);" rel="nofollow">
+                        <img src="{{ url.images }}/imagenes/libros/b-comprar.gif"
+                            alt="Comprar">
+                      </a>
+                    </td>
+                  </tr>
+                  </tbody>
+                  </table>
+                </div>
+              </td>
+            </tr>
+            </tbody>
+            </table>
+          </td>
+        </tr>
+        </tbody>
+        </table>
+      </td>
+    </tr>
+{%- endmacro -%}
+ 
 {%- if d.Products -%}
 	<div style="width: 650px; float: right; position:static;">
 	  <table cellpadding="0" cellspacing="0"
@@ -64,7 +140,8 @@
 	{%- set section_name    = d.Title.decode('utf-8') -%}
 	{%- set subsection_name = d.Path[-1].Nombre.decode('utf-8') -%}
 	{%- set cat_group       = d.Categoria_Grupo -%}
-	{%- set per_page        = 20 -%}
+	{%- set per_page        = 10 -%}
+	{%- set diff_per_page   = 0 -%}
 	{%- set p_count         = d.Products|length -%}
 	{%- if section == 1 -%}   {# Libros #}
 	    {%- set section_wh = (45, 68) -%}
@@ -75,84 +152,17 @@
 	{%- elif section == 3 -%} {# Juegos #}
 	    {%- set section_wh = (45, 68) -%}
 	{%- endif -%}
-	{%- if p_count < 20 %}
+	{%- if p_count < per_page %}
+		{%- set diff_per_page = per_page - p_count -%}
 	    {%- set per_page = p_count -%}
 	{%- endif -%}
 	{% for i in range(per_page) %}
 	    {%- set p = d.Products[i] -%}
-	    {%- if p['Authors'] and p['Authors'][0]|length > 0 -%}
-	        {%- set author = p.Authors[0].ContributorName.decode('utf-8')|e -%}
-	        {%- set author_url = p.Authors[0].ContributorURL|e -%}
-	    {%- else -%}
-	        {%- set author = '' -%}
-	        {%- set author_url = '' -%}
-	    {%- endif -%}
-	    {%- set p_id    = p.EntityId -%}
-	    {%- set p_cover = url.images + p.CoverSmall -%}
-	    {%- set p_title = p.Title.decode('utf-8')|e -%}
-	    {%- set p_url   = p.LinkBase|e + '.htm' -%}
-	    {%- set p_rank  = p.Row_Number|int -%}
-	    {%- set p_date  = p.PublishingDateValue -%}
-	            <tr>
-	              <td>
-	                <table width="390" cellspacing="0" cellpadding="0"
-	                    class="moduleproductob">
-	                <tbody>
-	                <tr>
-	                  <td>
-	                    <table cellspacing="0"
-	                        cellpadding="0">
-	                    <tbody>
-	                    <tr>
-	                      <td rowspan="5" class="celdafoto">
-	                        <a href="{{ p_url }}">
-	                        <img src="{{ p_cover }}" alt="{{ p_title }}"
-	                                class="Gimagesproductos"
-                                    width="{{ section_wh[0] }}"
-                                    height="{{ section_wh[1] }}">
-	                        </a>
-	                      </td>
-	                      <td colspan="3" valign="top" class="celdacontenido">
-	                        <a href="{{ p_url }}" class="FProductos">{{ p_title}}</a><br>
-	                        <a href="{{ author_url }}" class="Fautores">{{ author }}</a><br>
-	                        <a href="/buscador/productos.jsp?seccion={{ section }}&amp;idSeccion={{ section }}&amp;criterioDeOrden=6&amp;claveDeBusqueda=porCategorias&amp;texto={{ subsection_name|replace(' ','+')|e }}&amp;grupo={{ cat_group }}" class="Fautores">Subcategoria</a>&nbsp;<span class="Fprecio">{{ subsection_name }}</span>
-	                      </td>
-	                    </tr>
-	                    <tr>
-	                      <td valign="bottom" class="celdapreciocomprar">
-	                        <div>
-	                          <span class="Fprecio">PRECIO: $ {{ "%.2f"|format(p.PriceAmount) }}.-</span>
-	                        </div>
-	                      </td>
-	                      <td valign="bottom">
-	                        <div>
-	                          <table width="2" cellspacing="0" cellpadding="0"
-                                    class="catalog-info-price">
-	                          <tbody>
-	                          <tr>
-	                            <td class="divInfo">
-	                              <a href="{{ p_url }}" class="FProductos"><img src="{{ url.images }}/imagenes/libros/b-info.gif" alt="{{ author }} - {{ p_title }}" title="{{ author }} - {{ p_title }}"></a>
-	                            </td>
-	                            <td class="divComprarPedir">
-	                              <a href="javascript:APP.cartAdd('+e[pProductId]+');window.scrollTo(0,0);" rel="nofollow">
-	                                <img src="{{ url.images }}/imagenes/libros/b-comprar.gif"
-	                                    alt="Comprar">
-	                              </a>
-	                            </td>
-	                          </tr>
-	                          </tbody>
-	                          </table>
-	                        </div>
-	                      </td>
-	                    </tr>
-	                    </tbody>
-	                    </table>
-	                  </td>
-	                </tr>
-	                </tbody>
-	                </table>
-	              </td>
-	            </tr>
+	    {{ showItem(p, 'display:visible;') }}
+	{% endfor %}
+	{% for i in range(diff_per_page) %}
+	    {%- set p = d.Products[i] -%}
+	    {{ showItem(p, 'display:hidden;') }}
 	{% endfor %}
 	{#- set pages = (p_count/per_page)|round(0, 'ceil')|int -#}
 	{%- set pages = 10 -%}
