correccion de estilos para "Otros titulos"

--- a/content/stage0/css/movies.css
+++ b/content/stage0/css/movies.css
@@ -1042,7 +1042,7 @@ padding-bottom:7px;
 }
 
 .titulosceldas {
-background-color:#000;
+background-color:#FFF;
 padding:6px 0 6px 3px;
 text-align:left;
 }
