modificaciones afip f-960NM

--- a/content/templates/home/index.html
+++ b/content/templates/home/index.html
@@ -102,3 +102,7 @@
 	    {% include "fragments/right_menu.js" %}
 	</script>
 {%- endblock %}
+
+{% block canvas_footer_afip %}
+	{% include "fragments/canvas_footer_afip.html" %}
+{% endblock %}
