--- a/content/stage0/css/games.css
+++ b/content/stage0/css/games.css
@@ -582,6 +582,10 @@ border-bottom:dotted 1px #A8CAD5;
 background-image:url(/imagenes/rediseno/imagenes/seccionPasatiempos/b-comprarD.png);
 }
 
+.dNoDisponibleButton {
+background-image:url(/imagenes/rediseno/imagenes/seccionPasatiempos/b-nodispD.png);
+}
+
 .detalleBotonMenu {
 background-image:url(/imagenes/rediseno/imagenes/seccionPasatiempos/detalleBotonMenu-back.png);
 }
