--- a/content/templates/macros/productPrice.html
+++ b/content/templates/macros/productPrice.html
@@ -32,7 +32,13 @@
 				<div class="dComprarButton" title="Agregar al carrito"></div>
 			</a>
 		{%- else -%}
-			<img style="padding-left: 20px; cursor: pointer;" onclick="javascript:if (confirm(\'Este producto no esta disponible actualmente. Desea hacer un pedido?\'))document.location = \'/PedidoEspecial?ID_ARTICULO={{ price_data.EntityId }}\';"	src="/imagenes/rediseno/imagenes/seccion{{ getSection(price_data.Categoria_Seccion) }}/b-pedir.png"	alt="Pedir" />
+			{%- if price_data.ProductAvailability == '40' -%}
+				<a href="javascript:void(0);">
+					<div class="dNoDisponibleButton" title="No Disponible"></div>
+				</a>
+			{%- else -%}
+				<img style="padding-left: 20px; cursor: pointer;" onclick="javascript:if (confirm(\'Este producto no esta disponible actualmente. Desea hacer un pedido?\'))document.location = \'/PedidoEspecial?ID_ARTICULO={{ price_data.EntityId }}\';"	src="/imagenes/rediseno/imagenes/seccion{{ getSection(price_data.Categoria_Seccion) }}/b-pedir.png"	alt="Pedir" />
+			{%- endif -%}
 		{%- endif %}
 		<a href="/ayuda/ayudaEstandar.jsp?url=/ayuda/enviosPlazos.jsp"
 			target="_blank" class="dComprarEnvio">Ver costos de env&iacute;o y
