--- a/content/templates/macros/slider.html
+++ b/content/templates/macros/slider.html
@@ -122,8 +122,12 @@
                         <p class="product-cart-add">
                         {%- if p.ProductAvailability == '21' -%}
                             <a href="javascript:APP.cartAdd({{ product_id }})" title="agregar al carrito"><img src="{{ url.images }}/imagenes/rediseno/imagenes/seccionTematika/b-comprar.png" alt="agregar al carrito"></a>
-                        {%- else -%} {#- ProductAvailability == '22' -#}
-                            <a href="javascript:if (confirm('Este producto no esta disponible actualmente. Desea hacer un pedido?'))document.location = '/PedidoEspecial?ID_ARTICULO={{ product_id }}';"><img src="{{ url.images}}/imagenes/rediseno/imagenes/seccionTematika/b-pedir.png" alt="Pedir"></a>
+                        {%- else -%} 
+                        	{%- if p.ProductAvailability == '40' -%}
+                        		<a href="javascript:void(0);" title="No Disponible"><img src="{{ url.images }}/imagenes/rediseno/imagenes/seccionTematika/b-noDisp.png" alt="No Disponible"></a>
+                        	{%- else -%} {#- ProductAvailability == '22' -#}
+                            	<a href="javascript:if (confirm('Este producto no esta disponible actualmente. Desea hacer un pedido?'))document.location = '/PedidoEspecial?ID_ARTICULO={{ product_id }}';"><img src="{{ url.images}}/imagenes/rediseno/imagenes/seccionTematika/b-pedir.png" alt="Pedir"></a>
+                            {%- endif -%}
                         {%- endif -%}
                         </p>
                         <table class="product-infocomment"><tbody><tr>
